--- a/main.html
+++ b/main.html
@@ -10,7 +10,28 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<h1><strong>Spaghetti Recipe</strong></h1>
+	<h1><strong>Ingredients</strong></h1>
+	<ul>
+		<li><strong>Spaghetti</strong></li>
+		<li><strong>Marinara Sauce</strong></li>
+		<li><strong>Salt</strong></li>
+		<li><strong>Water</strong></li>
+	</ul>
+	<h1><strong>Instructions</strong></h1>
+	<ol>
+		<li><strong>Bring water to a boil.</strong></li>
+		<li>
+			<strong>Add spaghetti to boiling water.</strong>
+			<ol>
+				<li><strong>Add salt to taste.</strong></li>
+				<li><strong>Cook for 10 minutes, stirring occasionally.</strong></li>
+			</ol>
+		</li>
+		<li><strong>Add marinara sauce to a pan, bringing to a simmer..</strong></li>
+		<li><strong>Mix cooked spaghetti with marinara sauce..</strong></li>
+		<li><strong>Enjoy!.</strong></li>
+	</ol>
 </body>
 
 </html>
